fix(walletconnect-solana): fixed ReownProvider to properly cast provider to ISolana

--- a/packages/@dynamic-labs-connectors/walletconnect-solana/package.json
+++ b/packages/@dynamic-labs-connectors/walletconnect-solana/package.json
@@ -14,9 +14,10 @@
     "@dynamic-labs/solana-core": "^4.8.1",
     "@dynamic-labs/utils": "^4.8.1",
     "@dynamic-labs/wallet-connector-core": "^4.8.1",
-    "@reown/appkit-adapter-solana": "^1.6.9",
     "@solana/wallet-adapter-base": "^0.9.23",
-    "@solana/wallet-adapter-walletconnect": "^0.1.16"
+    "@solana/web3.js": "^1.92.1",
+    "@walletconnect/solana-adapter": "^0.0.6",
+    "eventemitter3": "^5.0.1"
   },
   "devDependencies": {
     "@swc/jest": "^0.2.37"
