--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@commitlint/config-nx-scopes": "^19.5.0",
     "@eslint/js": "^9.15.0",
+    "@nrwl/workspace": "^19.8.4",
     "@nx/eslint": "20.1.0",
     "@nx/eslint-plugin": "20.1.0",
     "@nx/jest": "20.1.0",
